--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -25,7 +25,7 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install app dependencies
-        run: pip install -r requirements-test.txt
+        run: pip install -r requirements.txt
 
       - name: Install dependencies
         run: |
