--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ mysql-connector-python
 requests
 rapidfuzz
 dotenv
+givelifylogging @ git+https://github.com/Givelify/structured-logging-python-package.git
