--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 google_api_key = ""
-database_username = ""
-database_password = ""
-host = ""
-port = ""
+DB_USERNAME = ""
+DB_PASSWORD = ""
+DB_HOST = ""
+DB_PORT = ""
