--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
+# Environments
 .env
-alternative.py
+.venv
+env/
+venv/
+
+# Logs
+*.log
+*.log.*
