--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ dotenv
 givelifylogging @ git+https://github.com/Givelify/structured-logging-python-package.git
 sqlalchemy
 tenacity
+shapely
+geoalchemy2
