--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,10 @@
 GOOGLE_API_KEY=""
-DB_USERNAME=""
-DB_PASSWORD=""
-DB_HOST=""
-DB_PORT=""
-DB_NAME=""
-GOOGLE_lOCATIONS_APP_PORT=""
+PLATFORM_DB_USERNAME=""
+PLATFORM_DB_PASSWORD=""
+PLATFORM_DB_HOST=""
+PLATFORM_DB_PORT=""
+PLATFORM_DB_NAME=""
 REDIS_HOST=""
 REDIS_HOST_PORT=""
-DOCKER_NETWORK=""
-REDIS_DB=""
-GP_CACHE_EXPIRE=""  # in days
+REDIS_DB=
+GP_CACHE_EXPIRE=  # in days
