--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-GOOGLE_API_KEY = ""
-DB_USERNAME = ""
-DB_PASSWORD = ""
-DB_HOST = ""
-DB_PORT = ""
-DB_NAME = ""
+GOOGLE_API_KEY=""
+PLATFORM_DB_USERNAME=""
+PLATFORM_DB_PASSWORD=""
+PLATFORM_DB_HOST=""
+PLATFORM_DB_PORT=""
+PLATFORM_DB_NAME=""
