--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-GOOGLE_API_KEY=""
-PLATFORM_DB_USERNAME=""
-PLATFORM_DB_PASSWORD=""
-PLATFORM_DB_HOST=""
-PLATFORM_DB_PORT=""
-PLATFORM_DB_NAME=""
+GOOGLE_API_KEY=
+PLATFORM_DB_USERNAME=givelify
+PLATFORM_DB_PASSWORD=givelify
+PLATFORM_DB_HOST_WRITE=mysql57
+PLATFORM_DB_PORT=13306
+PLATFORM_DB_NAME=platform
