--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ PLATFORM_DB_PASSWORD=givelify
 PLATFORM_DB_HOST_WRITE=mysql57
 PLATFORM_DB_PORT=13306
 PLATFORM_DB_NAME=platform
+
+
+GP_IDS=348,541,1505,2023,2059,2355,2605,2663,2888,2910,3833,4171
+BUILDING_OUTLINES_ONLY=true
+ENABLE_AUTOCOMPLETE=true
+LOG_LEVEL=INFO
