--- a/.pylintrc
+++ b/.pylintrc
@@ -2,4 +2,4 @@
 ignore=venv
 
 [MESSAGES CONTROL]
-disable=broad-exception-caught,too-many-arguments,too-many-positional-arguments
+disable=broad-exception-caught,too-many-arguments,too-many-positional-arguments,line-too-long, too-many-locals, duplicate-code
