job for donee-geocoder replacement and job for outlines pilot

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,9 @@ PLATFORM_DB_HOST_WRITE=mysql57
 PLATFORM_DB_PORT=13306
 PLATFORM_DB_DATABASE=platform
 
+MONO_DB_DATABASE=givelify
 
 GP_IDS=348,541,1505,2023,2059,2355,2605,2663,2888,2910,3833,4171
-BUILDING_OUTLINES_ONLY=true
-ENABLE_AUTOCOMPLETE=true
 LOG_LEVEL=INFO
+
+DAILY_ITERATION_LIMIT=1
