--- a/manifest.yaml
+++ b/manifest.yaml
@@ -21,7 +21,8 @@ services:
 components:
   - component: database
     database: platform
+  - component: database
+    database: mono
   - component: custom-config
     defaults:
-      BUILDING_OUTLINES_ONLY: True
-      ENABLE_AUTOCOMPLETE: True
+      DAILY_ITERATION_LIMIT: 1
