--- a/manifest.yaml
+++ b/manifest.yaml
@@ -15,13 +15,18 @@ services:
     jobs:
       retrieve-gp-google-outlines:
         schedule: "0 0 1 7 *" # We only plan to run this manually, but a schedule is required
-        command: ["python3", "-m", "app.main"]
+        command: ["python3", "-m", "app.scripts.outlines"]
+        suspend: true # Only Manual run
+      gp-geocoder:
+        schedule: "0 0 1 7 *" # We only plan to run this manually, but a schedule is required
+        command: ["python3", "-m", "app.scripts.donee_geocoder"]
         suspend: true # Only Manual run
 
 components:
   - component: database
     database: platform
+  - component: database
+    database: mono
   - component: custom-config
     defaults:
-      BUILDING_OUTLINES_ONLY: True
-      ENABLE_AUTOCOMPLETE: True
+      DAILY_ITERATION_LIMIT: 1
