--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,11 @@ GP_IDS=348,541,1505,2023,2059,2355,2605,2663,2888,2910,3833,4171
 LOG_LEVEL=INFO
 
 DAILY_ITERATION_LIMIT=1
+
+AWS_SNS_TOPIC=arn:aws:sns:us-east-1:000000000000:my-topic.fifo
+
+# For local development using localstack
+LOCALSTACK_HOSTNAME=http://localhost:4566
+AWS_ACCESS_KEY=test
+AWS_SECRET_KEY=test
+AWS_DEFAULT_REGION=us-east-1
