--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ DONEE_GEOCODER_ENABLE_OUTLINES=False
 
 AWS_SNS_TOPIC=arn:aws:sns:us-east-1:000000000000:my-topic.fifo
 
+APP_ENV=local
+SENTRY_DSN=
+
 # For local development using localstack
 LOCALSTACK_HOSTNAME=http://localhost:4566
 AWS_ACCESS_KEY=test
